Modificacion de la seccion de productos

--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
       </div>
   </nav>
 
-  <section class="main-container">
+  <!-- Product list  -->
+  <!-- <section class="main-container">
     <div class="cards-container">
 
       <div class="product-card">
@@ -132,7 +133,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <script src="scripts.js"></script>
 </body>
