--- a/index.html
+++ b/index.html
@@ -164,11 +164,10 @@
   </div>
   </aside>
 
-  <!-- Product list  -->
-  <!-- <section class="main-container">
+  <section class="main-container">
     <div class="cards-container">
 
-      <div class="product-card">
+      <!-- <div class="product-card">
         <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
         <div class="product-info">
           <div>
@@ -179,9 +178,10 @@
             <img src="./icons/bt_add_to_cart.svg" alt="">
           </figure>
         </div>
-      </div>
+      </div> -->
+
     </div>
-  </section> -->
+  </section>
 
   <script src="scripts.js"></script>
 </body>
